--- a/index.css
+++ b/index.css
@@ -1,1 +1,56 @@
-
+body{ 
+    background-color: antiquewhite;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.mother{ 
+    margin: 120px auto;
+    max-width: 500px;
+}
+h1{ 
+    line-height: 1.5;
+    text-align: center;
+}
+form{ 
+    padding: 30px;
+    background-color: white;
+    border-radius: 10px;
+    display: flex;
+    box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
+    margin-bottom: 20px;
+}
+.input-element{ 
+    padding: 10px;
+    border: 1px solid gray;
+    width: 80%;
+    font-size: 20px;
+    border-radius: 20px;
+    line-height: 20px;
+    color: black;
+}
+.button{ 
+    margin-left: 10px;
+    border: none;
+    background-color: rgb(39, 77, 121);
+    color: white;
+    border-radius:20px ;
+    padding:10px 20px ;
+    line-height: 20px;
+    font-size: 20px;
+}
+.poem{ 
+    font-size: 16px;
+    background-color: white;
+    padding: 20px;
+    line-height: 25px;
+    border-left: 3px solid rgb(39, 77, 121);
+    box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
+    border-radius: 10px;
+}
+footer{
+    text-align: center;
+    margin-top: 20px;
+    font-size: 15px;
+}
+a{ 
+    color: rgb(39, 77, 121);
+}
