--- a/index.css
+++ b/index.css
@@ -10,13 +10,23 @@ h1{
     line-height: 1.5;
     text-align: center;
 }
-form{ 
-    padding: 30px;
+.form-wrapper{ 
     background-color: white;
-    border-radius: 10px;
-    display: flex;
-    box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
     margin-bottom: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
+    padding: 30px;
+
+}
+form{ 
+    display: flex;
+}
+.example{ 
+    line-height: 1.5;
+    font-size: 15px;
+    opacity: 0.5;
+    font-size: 17px;
+    margin-top: 7px;
 }
 .input-element{ 
     padding: 10px;
@@ -45,6 +55,9 @@ form{
     border-left: 3px solid rgb(39, 77, 121);
     box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
     border-radius: 10px;
+}
+.hidden{ 
+    display: none;
 }
 footer{
     text-align: center;
