--- a/index.css
+++ b/index.css
@@ -1,10 +1,10 @@
 body{ 
     background-color: antiquewhite;
     font-family: Arial, Helvetica, sans-serif;
-}
-.mother{ 
     margin: 120px auto;
     max-width: 500px;
+}
+.mother{ 
 }
 h1{ 
     line-height: 1.5;
@@ -12,7 +12,7 @@ h1{
 }
 .form-wrapper{ 
     background-color: white;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
     border-radius: 10px;
     box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
     padding: 30px;
@@ -23,10 +23,13 @@ form{
 }
 .example{ 
     line-height: 1.5;
-    font-size: 15px;
+    font-size: 10px;
     opacity: 0.5;
-    font-size: 17px;
-    margin-top: 7px;
+    font-size: 15px;
+    margin-top: 5px;
+    display: block;
+    text-align: start;
+    
 }
 .input-element{ 
     padding: 10px;
@@ -57,7 +60,7 @@ form{
     border-radius: 10px;
 }
 .hidden{ 
-    display: none;
+    
 }
 footer{
     text-align: center;
@@ -67,3 +70,13 @@ footer{
 a{ 
     color: rgb(39, 77, 121);
 }
+
+.blink_me {
+    animation: blinker 1s linear infinite;
+  }
+  
+  @keyframes blinker {
+    50% {
+      opacity: 0;
+    }
+  }
